--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../node_modules/@chatscope/chat-ui-kit-styles/dist/default/styles.min.css">
-  <title>V Chat</title>
+  <meta name="description" content="V Chat is a real-time chat messages language translation app, which allows users to support multiple languages simultaneously." />
+  <meta name="keywords" content="v chat, V Chat, real-time chat messages language translation, language translation, multiple languages, chat message, chat">
+  <title>V Chat - Real time chat messages language translation app</title>
 </head>
 
 <body>
