--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../node_modules/@chatscope/chat-ui-kit-styles/dist/default/styles.min.css">
-  <meta name="description" content="V Chat is a real-time chat messages language translation app, which allows users to support multiple languages simultaneously." />
-  <meta name="keywords" content="v chat, V Chat, real-time chat messages language translation, language translation, multiple languages, chat message, chat">
+  <meta name="description"
+    content="V Chat is a real-time chat messages language translation app, which allows users to support multiple languages simultaneously." />
+  <meta name="keywords"
+    content="v chat, V Chat, real-time chat messages language translation, language translation, multiple languages, chat message, chat">
   <title>V Chat - Real time chat messages language translation app</title>
 </head>
 
@@ -16,6 +17,8 @@
   <script type="module" src="/src/main.jsx"></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script src="/node_modules/prop-types/prop-types.min.js"></script>
+  <script src="/node_modules/@chatscope/chat-ui-kit-react/dist/chat-ui-kit-react.min.js"></script>
 </body>
 
 </html>
